chapter1 parameter update added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -155,6 +155,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Updating the parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial guess: (0.4967141530112327, -0.13826430117118466)\n",
+      "Updated parameters: (0.8011952909762835, 0.04511107054392366)\n"
+     ]
+    }
+   ],
+   "source": [
+    "LEARNING_RATE = 0.1\n",
+    "\n",
+    "B_NEW = B - LEARNING_RATE * b_grad\n",
+    "W_NEW = W - LEARNING_RATE * w_grad\n",
+    "\n",
+    "print(f\"Initial guess: {B[0], W[0]}\")\n",
+    "print(f\"Updated parameters: {B_NEW[0], W_NEW[0]}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
