chapter1 loss updated in the training

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
      "text": [
       "Final intercept: 1.02354093708\n",
       "Final slope: 1.9689641135454565\n",
-      "Loss after 1000 epochs: inf\n"
+      "Loss after 1000 epochs: 0.008044657695505499\n"
      ]
     }
    ],
@@ -224,7 +224,7 @@
     "\n",
     "    error = y_train_hat - y_train\n",
     "\n",
-    "    loss = np.mean(loss ** 2)\n",
+    "    loss = np.mean(error ** 2)\n",
     "\n",
     "    intercept_grad = 2 * np.mean(error)\n",
     "\n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
