--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -265,6 +265,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pytorch experiments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.2000)\n",
+      "tensor([0.9000, 5.6000])\n",
+      "tensor([[1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.]])\n",
+      "tensor([[[ 1.8895,  0.9123],\n",
+      "         [ 0.3215,  1.9336]],\n",
+      "\n",
+      "        [[ 2.3729,  0.4707],\n",
+      "         [ 0.3317,  2.1200]],\n",
+      "\n",
+      "        [[ 0.8179,  0.1617],\n",
+      "         [-0.3088, -0.9842]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "scalar = torch.tensor(1.2)\n",
+    "vector = torch.tensor([0.9, 5.6])\n",
+    "matrix = torch.ones((3, 4), dtype=torch.float)\n",
+    "tensor = torch.randn((3, 2, 2), dtype=torch.float)\n",
+    "\n",
+    "print(scalar)\n",
+    "print(vector)\n",
+    "print(matrix)\n",
+    "print(tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 2, 2]) torch.Size([3, 2, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tensor.size(), tensor.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.],\n",
+      "        [1., 1., 1., 1.]])\n",
+      "tensor([[1.2000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000],\n",
+      "        [1.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_vector = matrix.view(-1, 1).clone().detach()\n",
+    "new_vector[0] = 1.2\n",
+    "\n",
+    "print(matrix)\n",
+    "print(new_vector)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
