chapter1 cuda and cpu basics added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -361,6 +361,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CUDA and CPU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cuda'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "NVIDIA GeForce RTX 3060 Laptop GPU\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(torch.cuda.device_count())\n",
+    "print(torch.cuda.get_device_name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "float64 torch.float32\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_tensor = torch.as_tensor(X_train).float()\n",
+    "print(X_train.dtype, X_train_tensor.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.77127035] tensor([-1000.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train_tensor = torch.tensor(X_train).float()\n",
+    "X_train_tensor[0] = -1000\n",
+    "print(X_train[0], X_train_tensor[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('float32')"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tensor.numpy().dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.7713], device='cuda:0', dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tensor = torch.tensor(X_train).to(device)\n",
+    "X_train_tensor[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
