--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -486,6 +486,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Running the regression using Pytorch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.ndarray'> <class 'torch.Tensor'> torch.cuda.FloatTensor\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "X_train_tensor = torch.as_tensor(X_train).float().to(device)\n",
+    "X_val_tensor = torch.as_tensor(X_val).float().to(device)\n",
+    "\n",
+    "print(type(X_train), type(X_train_tensor), X_train_tensor.type())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(X_train_tensor.cpu().numpy())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.1940], device='cuda:0', requires_grad=True) tensor([0.1391], device='cuda:0', requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "intercept = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "slope = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "\n",
+    "print(intercept, slope)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train_tensor = torch.as_tensor(y_train).float().to(device)\n",
+    "\n",
+    "y_train_tensor_hat = intercept + slope * X_train_tensor\n",
+    "\n",
+    "error = y_train_tensor_hat - y_train_tensor\n",
+    "\n",
+    "loss = (error ** 2).mean()\n",
+    "\n",
+    "loss.backward()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make_dot(y_train_tensor_hat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([-3.3881], device='cuda:0') tensor([-1.9439], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(intercept.grad, slope.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([0.], device='cuda:0') tensor([0.], device='cuda:0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(intercept.grad.zero_(), slope.grad.zero_())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: tensor([1.0235], device='cuda:0', requires_grad=True)\n",
+      "Slope: tensor([1.9690], device='cuda:0', requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "intercept = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "slope = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "\n",
+    "epochs = 1000\n",
+    "lr = 0.1\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    y_train_tensor_hat = intercept + slope * X_train_tensor\n",
+    "\n",
+    "    error = y_train_tensor_hat - y_train_tensor\n",
+    "\n",
+    "    loss = (error ** 2).mean()\n",
+    "\n",
+    "    loss.backward()\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        intercept -= lr * intercept.grad\n",
+    "        slope -= lr * slope.grad\n",
+    "\n",
+    "    intercept.grad.zero_()\n",
+    "    slope.grad.zero_()\n",
+    "\n",
+    "print(f\"Intercept: {intercept}\")\n",
+    "print(f\"Slope: {slope}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
