chapter 1 optimizer added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -661,6 +661,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding optimizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: tensor([1.0235], device='cuda:0', requires_grad=True)\n",
+      "Slope: tensor([1.9690], device='cuda:0', requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "intercept = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "slope = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "\n",
+    "epochs = 1000\n",
+    "lr = 0.1\n",
+    "\n",
+    "optimizer = optim.SGD([intercept, slope], lr=lr)\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    y_train_tensor_hat = intercept + slope * X_train_tensor\n",
+    "\n",
+    "    error = y_train_tensor_hat - y_train_tensor\n",
+    "\n",
+    "    loss = (error ** 2).mean()\n",
+    "\n",
+    "    loss.backward()\n",
+    "\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "print(f\"Intercept: {intercept}\")\n",
+    "print(f\"Slope: {slope}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
