chapter1 loss from nn added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -711,6 +711,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding the loss from nn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intercept: tensor([1.0235], device='cuda:0', requires_grad=True)\n",
+      "Slope: tensor([1.9690], device='cuda:0', requires_grad=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "intercept = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "slope = torch.randn(1, dtype=torch.float, requires_grad=True, device=device)\n",
+    "\n",
+    "epochs = 1000\n",
+    "lr = 0.1\n",
+    "\n",
+    "loss_fn = nn.MSELoss(reduction='mean')\n",
+    "\n",
+    "optimizer = optim.SGD([intercept, slope], lr=lr)\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    y_train_tensor_hat = intercept + slope * X_train_tensor\n",
+    "\n",
+    "    loss = loss_fn(y_train_tensor_hat, y_train_tensor)\n",
+    "\n",
+    "    loss.backward()\n",
+    "\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    optimizer.zero_grad()\n",
+    "\n",
+    "print(f\"Intercept: {intercept}\")\n",
+    "print(f\"Slope: {slope}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(0.00804466, dtype=float32)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss.detach().cpu().numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.008044655434787273 0.008044655434787273\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(loss.item(), loss.tolist())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
