chapter1 nn.Sequential added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -1010,6 +1010,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using sequential representation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight', tensor([[0.7645]], device='cuda:0')),\n",
+       "             ('0.bias', tensor([0.8300], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "model = nn.Sequential(nn.Linear(1, 1)).to(device)\n",
+    "model.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight',\n",
+       "              tensor([[ 0.4414,  0.4792, -0.1353],\n",
+       "                      [ 0.5304, -0.1265,  0.1165],\n",
+       "                      [-0.2811,  0.3391,  0.5090],\n",
+       "                      [-0.4236,  0.5018,  0.1081],\n",
+       "                      [ 0.4266,  0.0782,  0.2784]], device='cuda:0')),\n",
+       "             ('0.bias',\n",
+       "              tensor([-0.0815,  0.4451,  0.0853, -0.2695,  0.1472], device='cuda:0')),\n",
+       "             ('1.weight',\n",
+       "              tensor([[-0.2060, -0.0524, -0.1816,  0.2967, -0.3530]], device='cuda:0')),\n",
+       "             ('1.bias', tensor([-0.2062], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(3, 5), nn.Linear(5, 1)).to(device)\n",
+    "model.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('layer1.weight',\n",
+       "              tensor([[-0.1630, -0.3471,  0.0545],\n",
+       "                      [-0.5702,  0.5214, -0.4904],\n",
+       "                      [ 0.4457,  0.0961, -0.1875],\n",
+       "                      [ 0.3568,  0.0900,  0.4665],\n",
+       "                      [ 0.0631, -0.1821,  0.1551]], device='cuda:0')),\n",
+       "             ('layer1.bias',\n",
+       "              tensor([-0.1566,  0.2430,  0.5155,  0.3337, -0.2524], device='cuda:0')),\n",
+       "             ('layer2.weight',\n",
+       "              tensor([[ 0.2582,  0.0800,  0.2271, -0.2726, -0.4427]], device='cuda:0')),\n",
+       "             ('layer2.bias', tensor([-0.1728], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = nn.Sequential()\n",
+    "model.add_module('layer1', nn.Linear(3, 5))\n",
+    "model.add_module('layer2', nn.Linear(5, 1))\n",
+    "model.to(device)\n",
+    "model.state_dict()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
