chapter1 data preparation added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -1107,6 +1107,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing data_preparation/v0.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile data_preparation/v0.py\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "X_train_tensor = torch.as_tensor(X_train).float().to(device)\n",
+    "X_val_tensor = torch.as_tensor(X_val).float().to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i data_preparation/v0.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
