chapter1 model configuration added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -1145,6 +1145,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting model_configuration/v0.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_configuration/v0.py\n",
+    "\n",
+    "lr = 0.1\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(1, 1)).to(device)\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
+    "loss_fn = nn.MSELoss(reduction='mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_configuration/v0.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
