chapter1 model training added

--- a/chapter1.ipynb
+++ b/chapter1.ipynb
@@ -1190,6 +1190,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_training/v0.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_training/v0.py\n",
+    "\n",
+    "epochs = 1000\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    model.train()\n",
+    "\n",
+    "    y_train_tensor_hat = model(X_train_tensor)\n",
+    "\n",
+    "    loss = loss_fn(y_train_tensor_hat, y_train_tensor)\n",
+    "\n",
+    "    loss.backward()\n",
+    "\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    optimizer.zero_grad()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight', tensor([[1.9690]], device='cuda:0')),\n",
+       "             ('0.bias', tensor([1.0235], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run -i model_training/v0.py \n",
+    "\n",
+    "model.state_dict()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
