chapter2 high order function for training step

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -29,6 +29,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating higher-order function for a training step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_train_step_fn(model, optimizer, lossfn):\n",
+    "\n",
+    "    def perform_train_step(x, y):\n",
+    "\n",
+    "        model.train()\n",
+    "\n",
+    "        y_hat = model(x)\n",
+    "\n",
+    "        loss = lossfn(y_hat, y)\n",
+    "\n",
+    "        loss.backward()\n",
+    "\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        return loss.item()\n",
+    "    \n",
+    "    return perform_train_step"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
