chapter2 data preparation added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -69,6 +69,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Running data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 100\n",
+    "ERROR_SCALE = 0.1\n",
+    "TRUE_B = 1\n",
+    "TRUE_W = 2\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X = np.random.rand(N, 1)\n",
+    "error = ERROR_SCALE * np.random.randn(N, 1)\n",
+    "y = TRUE_B + TRUE_W * X + error\n",
+    "\n",
+    "idx = np.arange(N)\n",
+    "np.random.shuffle(idx)\n",
+    "\n",
+    "train_idx = idx[:int(N*.8)]\n",
+    "val_idx = idx[int(N*.8):]\n",
+    "\n",
+    "X_train, y_train = X[train_idx], y[train_idx]\n",
+    "X_val, y_val = X[val_idx], y[val_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i data_preparation/v0.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
