chapter2 model configuration added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -112,6 +112,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating the model configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_configuration/v1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_configuration/v1.py\n",
+    "\n",
+    "lr = 0.1\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(1, 1)).to(device)\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
+    "lossfn = nn.MSELoss(reduction=\"mean\")\n",
+    "\n",
+    "train_step_fn = make_train_step_fn(model, lossfn, optimizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_configuration/v1.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.make_train_step_fn.<locals>.perform_train_step(x, y)>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_step_fn"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
