chapter2 model training added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,15 @@
     "val_idx = idx[int(N*.8):]\n",
     "\n",
     "X_train, y_train = X[train_idx], y[train_idx]\n",
-    "X_val, y_val = X[val_idx], y[val_idx]"
+    "X_val, y_val = X[val_idx], y[val_idx]\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "X_train_tensor = torch.as_tensor(X_train).float().to(device)\n",
+    "X_val_tensor = torch.as_tensor(X_val).float().to(device)\n",
+    "\n",
+    "y_train_tensor = torch.as_tensor(y_train).float().to(device)\n",
+    "y_val_tensor = torch.as_tensor(y_val).float().to(device)"
    ]
   },
   {
@@ -176,6 +184,62 @@
    ],
    "source": [
     "train_step_fn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_training/v1.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_training/v1.py\n",
+    "\n",
+    "epochs = 1000\n",
+    "\n",
+    "losses = []\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    loss = train_step_fn(X_train_tensor, y_train_tensor)\n",
+    "\n",
+    "    losses.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'SGD' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "File \u001b[1;32m~\\OneDrive\\Desktop\\ML Projects\\Pytorch\\Pytorch_Study\\model_training\\v1.py:8\u001b[0m\n\u001b[0;32m      4\u001b[0m losses \u001b[39m=\u001b[39m []\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m----> 8\u001b[0m     loss \u001b[39m=\u001b[39m train_step_fn(X_train_tensor, y_train_tensor)\n\u001b[0;32m     10\u001b[0m     losses\u001b[39m.\u001b[39mappend(loss)\n",
+      "Cell \u001b[1;32mIn[5], line 9\u001b[0m, in \u001b[0;36mmake_train_step_fn.<locals>.perform_train_step\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m      7\u001b[0m y_hat \u001b[39m=\u001b[39m model(x)\n\u001b[1;32m----> 9\u001b[0m loss \u001b[39m=\u001b[39m lossfn(y_hat, y)\n\u001b[0;32m     11\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m     13\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'SGD' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "%run -i model_training/v1.py"
    ]
   },
   {
