chapter2 model configuration modified

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -128,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing model_configuration/v1.py\n"
+      "Overwriting model_configuration/v1.py\n"
      ]
     }
    ],
@@ -154,12 +154,12 @@
     "\n",
     "lossfn = nn.MSELoss(reduction=\"mean\")\n",
     "\n",
-    "train_step_fn = make_train_step_fn(model, lossfn, optimizer)"
+    "train_step_fn = make_train_step_fn(model, optimizer, lossfn)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
