chapter2 model training modified

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "<function __main__.make_train_step_fn.<locals>.perform_train_step(x, y)>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing model_training/v1.py\n"
+      "Overwriting model_training/v1.py\n"
      ]
     }
    ],
@@ -222,24 +222,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_training/v1.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'SGD' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "File \u001b[1;32m~\\OneDrive\\Desktop\\ML Projects\\Pytorch\\Pytorch_Study\\model_training\\v1.py:8\u001b[0m\n\u001b[0;32m      4\u001b[0m losses \u001b[39m=\u001b[39m []\n\u001b[0;32m      6\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(epochs):\n\u001b[1;32m----> 8\u001b[0m     loss \u001b[39m=\u001b[39m train_step_fn(X_train_tensor, y_train_tensor)\n\u001b[0;32m     10\u001b[0m     losses\u001b[39m.\u001b[39mappend(loss)\n",
-      "Cell \u001b[1;32mIn[5], line 9\u001b[0m, in \u001b[0;36mmake_train_step_fn.<locals>.perform_train_step\u001b[1;34m(x, y)\u001b[0m\n\u001b[0;32m      5\u001b[0m model\u001b[39m.\u001b[39mtrain()\n\u001b[0;32m      7\u001b[0m y_hat \u001b[39m=\u001b[39m model(x)\n\u001b[1;32m----> 9\u001b[0m loss \u001b[39m=\u001b[39m lossfn(y_hat, y)\n\u001b[0;32m     11\u001b[0m loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m     13\u001b[0m optimizer\u001b[39m.\u001b[39mstep()\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'SGD' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight', tensor([[1.9690]], device='cuda:0')),\n",
+       "             ('0.bias', tensor([1.0235], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "%run -i model_training/v1.py"
+    "model.state_dict()"
    ]
   },
   {
