chapter2 datasets part added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -251,6 +251,79 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomDS(Dataset):\n",
+    "    def __init__(self, x_tensor, y_tensor):\n",
+    "        self.x = x_tensor\n",
+    "        self.y = y_tensor\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return (self.x[idx], self.y[idx])\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.7713]), tensor([2.4745]))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_tensor = torch.as_tensor(X_train).float()\n",
+    "X_val_tensor = torch.as_tensor(X_val).float()\n",
+    "\n",
+    "y_train_tensor = torch.as_tensor(y_train).float()\n",
+    "y_val_tensor = torch.as_tensor(y_val).float()\n",
+    "\n",
+    "train_data = CustomDS(X_train_tensor, y_train_tensor)\n",
+    "train_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.7713]), tensor([2.4745]))"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "train_data[0]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
